--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eosjs-ecc": "^4.0.7",
+    "roxejs-ecc": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "mocha": "^6.2.2",
     "node-fetch": "^2.6.0",
